fix(deps): update dependencies to fix vulnerabilities (#99)